--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-extensions",
   "description": "jquery extensions library",
-  "main": "index.js",
+  "main": "dist/jquery.extensions.js",
   "authors": [
     "S. Francis"
   ],
