Added version to bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "jquery-extensions",
   "description": "jquery extensions library",
+  "version":"1.0.0",
   "main": "dist/jquery.extensions.js",
   "authors": [
     "S. Francis"
