--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,19 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    ".gitignore",
+    ".npmignore",
+    "gulpfile.js",
+    "lib",
+    "docs",
+    "index.js",
+    "umd.js",
+    "package.json",
+    "demo",
+    "index.html",
+    "build.json",
+    "bundle.json"
   ],
   "dependencies": {
     "elliptical-jquery": ">=3.0.0"
